--- a/.env.codeship
+++ b/.env.codeship
@@ -7,7 +7,7 @@ APP_URL=http://foro.dev
 DB_CONNECTION=mysql_tests
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=foro_tests
+DB_DATABASE=foro_test
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
