--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "autoload-dev": {
         "classmap": [
             "tests/TestCase.php",
-            "tests/FeaturesTestCase.php"
+            "tests/FeatureTestCase.php"
         ]
     },
     "scripts": {
